--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
+html {
+  --border-color: rgb(237, 129, 237);
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #111827;
+  color: rgb(209, 213, 219);
+}
+
+.btn {
+  all: unset;
+  padding: 0.75rem 1rem;
+  background-color: rgb(31, 41, 55);
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+  width: 8rem;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.btn:focus {
+  outline-color: var(--border-color);
+  outline-width: 2px;
+  outline-style: dashed;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-secondary {
+  background-color: rgb(255, 255, 255, 0.8);
+  color: rgb(17, 24, 39);
+  width: 10rem;
 }
