--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ html {
 }
 
 .App {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,4 +36,8 @@ html {
   background-color: rgb(255, 255, 255, 0.8);
   color: rgb(17, 24, 39);
   width: 10rem;
+}
+
+path {
+  fill: rgb(255, 255, 255, 0.8);
 }
