--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,9 @@ button:disabled {
   opacity: 0.6;
   cursor: not-allowed;
 }
+
+a {
+  text-decoration: none;
+  color: var(--border-color);
+  font-weight: bold;
+}
